--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-file-base64": "^1.0.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
